Add text view and animations to games list view. We still need to implement sliding up when clicking the button again, and showing the information retrieved from the API.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="action_add">Add Game</string>
+    <string name="enter_title">Enter Title…</string>
 </resources>
